--- a/prometheus/docker-compose.yml
+++ b/prometheus/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     container_name: 'prometheus'
     volumes:
     - ./config/:/etc/prometheus/
+    - ./config/localtime:/etc/localtime:ro
     ports:
      - '9090:9090'
   grafana:
@@ -15,6 +16,7 @@ services:
     volumes:
       - ./grafana/config/grafana.ini:/etc/grafana/grafana.ini  #grafana报警邮件配置
       - ./grafana/provisioning/:/etc/grafana/provisioning/  #配置grafana的prometheus数据源
+      - ./config/localtime:/etc/localtime:ro
     env_file:
       - ./grafana/config.monitoring  #grafana登录配置
     depends_on:
@@ -27,8 +29,8 @@ services:
       - "discovery.type=single-node" #以单一节点模式启动
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m" #设置使用jvm内存大小，稍微配置大点，不然有可能启动不成功
     volumes:
-      - /mydata/elasticsearch/plugins:/usr/share/elasticsearch/plugins #插件文件挂载
-      - /mydata/elasticsearch/data:/usr/share/elasticsearch/data #数据文件挂载
+      - /usr/local/var/log/elasticsearch/plugins:/usr/share/elasticsearch/plugins #插件文件挂载
+      - /usr/local/var/log/elasticsearch/data:/usr/share/elasticsearch/data #数据文件挂载
     ports:
       - 9200:9200
       - 9300:9300
@@ -43,10 +45,40 @@ services:
       - "elasticsearch.hosts=http://es:9200" #设置访问elasticsearch的地址
     ports:
       - 5601:5601
+  redis:
+    image: redis
+    container_name: redis
+    ports:
+      - 6379:6379
   redis_exporter:
-    image: oliver006/redis_exporter
+    image: oliver006/redis_exporter:v1.6.1-arm
     container_name: redis_exporter
     environment:
-      - "redis.addr=redis://127.0.0.1:6379" #设置访问elasticsearch的地址
+      - "REDIS_ADDR=redis://redis:6379" #设置访问elasticsearch的地址
     ports:
       - 9121:9121
+    depends_on:
+      - redis
+  mysql:
+    image: mysql/mysql-server:5.7
+    container_name: mysql
+    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      - "TZ=Asia/Shanghai" # 设置容器时区与宿主机保持一致
+      - "MYSQL_ROOT_PASSWORD=886887"
+    volumes:
+      - ./config/localtime:/etc/localtime:ro # 设置容器时区与宿主机保持一致
+      - /usr/local/var/mysql:/var/lib/mysql # 映射数据库保存目录到宿主机，防止数据丢失
+      - ./mysql:/etc/mysql # 映射数据库配置文件
+    ports:
+      - 3306:3306
+  mysql_exporter:
+    image: prom/mysqld-exporter
+    container_name: mysql_exporer
+    ports:
+      - 9104:9104
+    environment:
+      - "DATA_SOURCE_NAME=root:886887@(mysql:3306)/final"
+    depends_on:
+      - mysql
