--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -95,6 +95,7 @@ services:
   jenkins:
     container_name: webjenkins
     image: 'jenkins/jenkins:lts'
+    user: root
     restart: always
     environment:
       - TZ=Asia/Shanghai
@@ -105,3 +106,33 @@ services:
       - ./jenkins-data:/var/jenkins_home:z
       - ./jenkins-data/docker.sock:/var/run/docker.sock
     network_mode: "bridge"
+  ngrok:
+    image: shkoliar/ngrok:latest
+    ports:
+      - 4551:4551
+    environment:
+      - DOMAIN=192.168.0.109
+      - PORT=8999
+      - PROTOCOL=http
+  nginx:
+    restart: always
+    image: nginx:1.11.6-alpine
+    ports:
+      - 8080:80
+      - 80:80
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/.htpasswd:/etc/nginx/.htpasswd
+      - /usr/local/var/nginx/log:/var/log/nginx
+      - ./www:/var/www
+      - /etc/letsencrypt:/etc/letsencrypt
+  live:
+    image: live
+    build: ./live
+    container_name: live
+    ports:
+      - 8887:8887
+      - 8886:8886
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - ./live/log:/usr/local/var/log
