--- a/apps/docker-compose-mysql-slave.yml
+++ b/apps/docker-compose-mysql-slave.yml
@@ -9,9 +9,9 @@ services:
       - "TZ=Asia/Shanghai" # 设置容器时区与宿主机保持一致
       - "MYSQL_ROOT_PASSWORD=886887"
     volumes:
-      - ./config/localtime:/etc/localtime:ro # 设置容器时区与宿主机保持一致
-      - /usr/local/var/mysql/master:/var/lib/mysql # 映射数据库保存目录到宿主机，防止数据丢失
-      - ./mysql/master:/etc/mysql # 映射数据库配置文件
+#      - ./config/localtime:/etc/localtime:ro # 设置容器时区与宿主机保持一致
+      - ./data/mysql/lib/master:/var/lib/mysql # 映射数据库保存目录到宿主机，防止数据丢失
+      - ./data/mysql/master:/etc/mysql # 映射数据库配置文件
     ports:
       - 3307:3306
   mysql-slave:
@@ -23,8 +23,8 @@ services:
       - "TZ=Asia/Shanghai" # 设置容器时区与宿主机保持一致
       - "MYSQL_ROOT_PASSWORD=886887"
     volumes:
-      - ./config/localtime:/etc/localtime:ro # 设置容器时区与宿主机保持一致
-      - /usr/local/var/mysql/slave1:/var/lib/mysql # 映射数据库保存目录到宿主机，防止数据丢失
-      - ./mysql/slave:/etc/mysql # 映射数据库配置文件
+#      - ./config/localtime:/etc/localtime:ro # 设置容器时区与宿主机保持一致
+      - ./data/mysql/lib/slave1:/var/lib/mysql # 映射数据库保存目录到宿主机，防止数据丢失
+      - ./data/mysql/slave:/etc/mysql # 映射数据库配置文件
     ports:
       - 3308:3306
