--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -29,8 +29,8 @@ services:
       - "discovery.type=single-node" #以单一节点模式启动
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m" #设置使用jvm内存大小，稍微配置大点，不然有可能启动不成功
     volumes:
-      - /usr/local/var/log/elasticsearch/plugins:/usr/share/elasticsearch/plugins #插件文件挂载
-      - /usr/local/var/log/elasticsearch/data:/usr/share/elasticsearch/data #数据文件挂载
+      - ./data/elasticsearch/plugins:/usr/share/elasticsearch/plugins #插件文件挂载
+      - ./data/elasticsearch/data:/usr/share/elasticsearch/data #数据文件挂载
     ports:
       - 9200:9200
       - 9300:9300
@@ -50,7 +50,7 @@ services:
     container_name: redis
     command: redis-server /etc/redis/redis.conf --appendonly yes
     volumes:
-      - /usr/local/var/redis/data/:/data/
+      - ./data/redis/data/:/data/
       - ./redis/redis.conf:/etc/redis/redis.conf
       - ./config/localtime:/etc/localtime:ro
     ports:
@@ -71,13 +71,13 @@ services:
     image: mysql/mysql-server:5.7
     container_name: mysql
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --default-authentication-plugin=mysql_native_password
-    restart: always
+#    restart: always
     environment:
       - "TZ=Asia/Shanghai" # 设置容器时区与宿主机保持一致
       - "MYSQL_ROOT_PASSWORD=886887"
     volumes:
       - ./config/localtime:/etc/localtime:ro # 设置容器时区与宿主机保持一致
-      - /usr/local/var/mysql:/var/lib/mysql # 映射数据库保存目录到宿主机，防止数据丢失
+      - ./data/mysql/:/var/lib/mysql # 映射数据库保存目录到宿主机，防止数据丢失
       - ./mysql:/etc/mysql # 映射数据库配置文件
     ports:
       - 3306:3306
@@ -107,7 +107,7 @@ services:
       - ./jenkins-data/docker.sock:/var/run/docker.sock
     network_mode: "bridge"
   zk:
-    image: zookeeper
+    image: zookeeper:3.5
     restart: always
     container_name: zk
     hostname: zk
@@ -115,31 +115,31 @@ services:
       - "2181:2181"
     volumes:
       - ./config/localtime:/etc/localtime
-      - /usr/local/var/zookeeper/zoo1/data:/data
-      - /usr/local/var/zookeeper/zoo1/datalog:/datalog
+      - ./data/zk/zoo1/data:/data
+      - ./data/zk/zoo1/datalog:/datalog
     environment:
       ZOO_MY_ID: 1
       ZOO_SERVERS: server.1=zk:2888:3888;2181
   kafka:
-    image: wurstmeister/kafka       # 镜像
-    volumes:
-      - ./config/localtime:/etc/localtime # 挂载位置（kafka镜像和宿主机器之间时间保持一直）
+    image: confluentinc/cp-kafka:5.5.1
+    container_name: kafka
+    hostname: kafka
     ports:
       - "9092:9092"
+      - 9999:9999
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka:19092,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
+      KAFKA_ZOOKEEPER_CONNECT: zk:2181
+      KAFKA_BROKER_ID: 1
+      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      JMX_PORT: 9999
+    volumes:
+      - ./data/zk-single-kafka-single/kafka1/data:/var/lib/kafka/data
     depends_on:
       - zk
-    links:
-      - zk
-    environment:
-      KAFKA_ADVERTISED_HOST_NAME: 10.180.7.140   # 修改:宿主机IP
-      KAFKA_ZOOKEEPER_CONNECT: zk:2181       # 卡夫卡运行是基于zookeeper的
-      KAFKA_ADVERTISED_PORT: 9092
-      KAFKA_LOG_RETENTION_HOURS: 120
-      KAFKA_MESSAGE_MAX_BYTES: 10000000
-      KAFKA_REPLICA_FETCH_MAX_BYTES: 10000000
-      KAFKA_GROUP_MAX_SESSION_TIMEOUT_MS: 60000
-      KAFKA_NUM_PARTITIONS: 3
-      KAFKA_DELETE_RETENTION_MS: 1000
   kafka-manager:
     container_name: kafka-manager
     image: sheepkiller/kafka-manager                # 镜像：开源的web管理kafka集群的界面
@@ -160,7 +160,7 @@ services:
     environment:
       - DOMAIN=192.168.0.109
       - PORT=8999
-      - PROTOCOL=http
+      - PROTOCOL=tcp
   nginx:
     restart: always
     image: nginx:1.11.6-alpine
@@ -170,16 +170,16 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/.htpasswd:/etc/nginx/.htpasswd
-      - /usr/local/var/nginx/log:/var/log/nginx
+      - ./data/nginx/log:/var/log/nginx
       - ./www:/var/www
       - /etc/letsencrypt:/etc/letsencrypt
-  live:
-    image: live
-    build: ./live
-    container_name: live
-    ports:
-      - 8887:8887
-      - 8886:8886
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - ./live/log:/usr/local/var/log
+#  live:
+#    image: live
+#    build: ./live
+#    container_name: live
+#    ports:
+#      - 8887:8887
+#      - 8886:8886
+#    volumes:
+#      - /etc/localtime:/etc/localtime:ro
+#      - ./live/log:/usr/local/var/log
