--- a/apps/config/prometheus.yml
+++ b/apps/config/prometheus.yml
@@ -19,10 +19,34 @@ scrape_configs:
     metrics_path: '/metrics'
     scrape_interval: 5s
     static_configs:
-      - targets: ['192.168.3.9:9104']
+      - targets: ['mysql_exporter_master:9104']
         labels:
           instance: mysql
-          application: mysql
+          application: mysql_exporter_master
+  - job_name: 'mysql'
+      metrics_path: '/metrics'
+      scrape_interval: 5s
+      static_configs:
+        - targets: ['mysql_exporter_slave:9105']
+          labels:
+            instance: mysql
+            application: mysql_exporter_slave
+  - job_name: 'mysql'
+      metrics_path: '/metrics'
+      scrape_interval: 5s
+      static_configs:
+        - targets: ['mysql_exporter_master-1:9106']
+          labels:
+            instance: mysql
+            application: mysql_exporter_master-1
+  - job_name: 'mysql'
+      metrics_path: '/metrics'
+      scrape_interval: 5s
+      static_configs:
+        - targets: ['mysql_exporter_slave-1:9107']
+          labels:
+            instance: mysql
+            application: mysql_exporter_slave-1
   - job_name: 'redis'
     metrics_path: '/metrics'
     scrape_interval: 5s
